# ledboard-desktop

./: .gitignore  README.md  detec.json  pyproject.toml
ledboarddesktop/: __main__.py  board_details_widget.py  central_widget.py  components.py  firmware_selector_widget.py  launcher.py  settings.py
ledboarddesktop/artnet/: broadcaster.py  widget.py
ledboarddesktop/board_detection/: board_detector.py  woker.py
ledboarddesktop/board_list/: list_item_widget.py  listed_board_widget.py  widget.py
ledboarddesktop/control_parameters/: annotated_dataclass.py  control_parameters.py  widget.py  widget_maker.py
ledboarddesktop/emulator/: __init__.py
ledboarddesktop/scan/: widget.py
ledboarddesktop/scan/viewport/: detection_point_graphics_item.py  graphics_view.py  options.py  tools.py  widget.py
ledboarddesktop/scan/viewport/interactors/: detection_point_selector.py  mask_drawer.py  navigator.py
ledboarddesktop/threaded_board_communication/: threaded_board_communicator.py  woker.py  worker.py
