[build-system]
requires = [
  "setuptools>=46.0",
  "dataclasses_json",
  "ledboardlib@git+https://github.com/Frangitron/ledboard-lib@main",
  "pyside6-helpers@git+https://github.com/MrFrangipane/pyside6-helpers@main"
]
build-backend = "setuptools.build_meta"

[project]
name = "ledboarddesktop"
description = "LED Board Desktop App"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  { name = "Frangitron", email = "contact@frangitron.com" }
]
maintainers = [
  { name = "Frangitron", email = "contact@frangitron.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["python", "frangitron"]
dynamic = ["version"]
